# research-agent

./: .env.example  .gitignore  .gitleaksignore  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.claude-memory/: MEMORY.md  architecture.md  development-log.md  feedback_epistemic_separation.md  feedback_pacing_one_question.md  feedback_regression_check_on_regather.md  feedback_tests_vs_evals.md  feedback_understand_before_executing.md  feedback_verify_against_source_of_truth.md  kb_north_star.md  reference_brandon_behring_dev.md  reference_memory_synced_via_git.md  research_agent_archived.md  research_kb_desktop.md  synthesis_kb_eval.md  synthesis_kb_planned.md  user_ml_generalist.md  user_runpod_deploy.md
.github/workflows/: ci.yml
docs/: REQUIREMENTS_SPEC.md  demo.cast  demo_runner.sh  eval_baselines.md
docs/plans/active/: 2026-02-24_best-practices-upgrade.md  2026-02-27_phases-5-7.md  2026-05-27_kb-system-design-all-domain.md  2026-05-29_session-handoff.md  synthesis_kb_migration_2026-05-21.md
docs/plans/implemented/: 2026-02-24_best-practices-upgrade.md
evals/: __init__.py  conftest.py  judges.py  metrics.py  test_judges.py  test_metrics.py  test_query_planner_eval.py  test_search_relevance_eval.py  test_synthesis_eval.py  test_validation.py
evals/cases/: causal_forests.json  dml_assumptions.json  iv_vs_rdd.json
src/research_agent/: __init__.py  cache.py  cli.py  config.py  exceptions.py  graph.py  llm.py  mcp_client.py  parsing.py  state.py
src/research_agent/nodes/: __init__.py  assumption_auditor.py  citation_analyzer.py  concept_explorer.py  connection_explorer.py  literature_search.py  query_planner.py  synthesis.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_connection_explorer.py  test_exceptions.py  test_graph.py  test_integration.py  test_llm.py  test_mcp_client.py  test_models.py  test_nodes.py  test_parsers.py  test_parsing_util.py  test_synthesis.py
