[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-agent"
version = "0.1.0"
description = "Multi-agent research analysis system powered by LangGraph and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Brandon Behring" }
]
keywords = [
    "langgraph",
    "multi-agent",
    "mcp",
    "research",
    "rag",
    "knowledge-graph",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.8.0",
    "mypy>=1.19,<2",
    "pre-commit>=3.0.0",
]

[project.scripts]
research-agent = "research_agent.cli:main"

[project.urls]
Homepage = "https://github.com/brandonmbehring-dev/research-agent"
Repository = "https://github.com/brandonmbehring-dev/research-agent.git"
"Bug Tracker" = "https://github.com/brandonmbehring-dev/research-agent/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::ResourceWarning"]
markers = [
    "integration: marks tests requiring live MCP server",
    "eval: marks evaluation tests (require ANTHROPIC_API_KEY, slow)",
    "timeout: set test timeout in seconds (pytest-timeout)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "langgraph.*",
    "langsmith.*",
    "tenacity.*",
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]
